# fltkhs-hello-world

./: .ghci  .gitignore  README.md  Setup.hs  cabal.project  fltkhs-hello-world.cabal  stack-repl.yaml  stack-windows.yaml  stack.yaml
src/: hello-world.hs
