name : fltkhs-hello-world
version : 0.0.0.1
synopsis : Fltkhs template project
description:
    Starter kit for an FLTKHS project
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Simple
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-hello-world
category: UI,Graphics
cabal-version: >=2.0
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-hello-world

Executable fltkhs-hello-world
  Main-Is: hello-world.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  default-language: Haskell2010
  ghc-Options: -Werror -threaded
